0.4 -> 0.5
 2018-01-14

 Improvements:
 - Improve new waves settings.

0.3 -> 0.4
 2018-01-14

 Bug Fix Release:
 - Fix mistake in new waves settings.

0.2.0 -> 0.3
 2018-01-14

 Improvements:
 - Increase tech level from "mo_custom_cost_multiplier" > 1.4.

 Bug Fix Release:
 - Add taken units to the new team.

0.2.0 -> 0.2.3
 2018-01-12

 Bug Fix Release:
 - Improve new wave settings add max tech level to wave settings.

0.2.0 -> 0.2.2
 2018-01-12

 Bug Fix Release:
 - Fix Robots not working at all.

0.2.0 -> 0.2.1
 2018-01-12

 Improvements:
 - Increase default mo_graceperiod to 280->600.
 - Rename mo_maxchicken -> mo_custom_maxchicken and scale it per player.
 - Get the real count of human Teams (no dead or taken teams) for minRobots/maxRobots.

0.1.6 -> 0.2.0
 2018-01-11

 Bug Fix Release:
 - Fix the changelog format for the ingame viewer.
 - Fix not moving units and debug output when a team has been taken.

 Improvements:
 - New waves logic, robot should spawn now more dynamicaly.

 - Replace mo_custom_chickenspawn with mo_custom_numwaves
   Now you can define how many waves you wanna see until KING comes.

0.1.5 -> 0.1.6
 2018-01-03

 Bugs Fix Release:
 - Fix exceptions when a team dies.

0.1.4 -> 0.1.5
 2018-01-01

 Bugs Fix Release:
 - Fix Game over with multiple KING's (all need to die).
 - Fixes a bug where the KING doesn't fight anymore.

0.1.3 -> 0.1.4
 2018-01-01

 Bugs Fix Release:
 - Lots of smaller Bugfixes.

0.0.3 -> 0.1.3
 2017-12-31

 Improvements:
 - Make multiple bots fully working, means by adding 2 bots you get two times the harder game.

0.0.0 -> 0.0.3
 2017-12-28

 Improvements:
 - Add logic so Robots attack big eco spots first.